--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button onclick="appendToDisplay('-')">-</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="calculateResult()">=</button>
-            <button onclick="appendToDisplay('+')">+</button>
+            <button onclick="appendToDisplay('add')">+</button>
         </div>
     </div>
     <script src="script.js"></script>
